# Perfume-Checker

./: .gitignore  README.md  pyproject.toml  requirements.txt
bchecker/: __main__.py
