[tool.poetry]
name = "checkfresh"
version = "0.1.0"
description = ""
authors = ["x404xx <ghost.py@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.27.0"
inquirer = "^3.2.5"
rich = "^13.7.1"
unidecode = "^1.3.8"
user-agent = "^0.1.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
